methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:19: error: not found: value ramasseBiscuit
  ramasseBiscuit()
  ^